--- a/map.html
+++ b/map.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>성산고 전자제품 수거함 위치</title>
   <meta charset="utf-8" />
-  <title>OSM + Leaflet 지도 예제</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet/dist/leaflet.css"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
   <style>
-    #map {
-      width: 100%;
-      height: 500px; /* 반드시 필요! */
-    }
+    #map { height: 600px; }
   </style>
 </head>
 <body>
-  <h2>우리 학교 근처 전자제품 수거함 위치</h2>
+
+  <h2>대구 성산고등학교 근처 전자제품 수거함 위치</h2>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    var map = L.map('map').setView([37.5665, 126.9780], 13); // 서울 시청 좌표
+    // 지도 생성 (성산고 근처 중심)
+    var map = L.map('map').setView([35.8411, 128.5150], 15);
 
+    // OSM 타일 추가
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
-      attribution: '© OpenStreetMap contributors'
+      attribution: '© OpenStreetMap'
     }).addTo(map);
 
-    var marker = L.marker([37.5665, 126.9780]).addTo(map)
-      .bindPopup('전자제품 수거함 위치')
-      .openPopup();
+    // 수거함 마커 추가
+    var locations = [
+      { name: "성산동 전자제품 수거함", lat: 35.8425, lng: 128.5130 },
+      { name: "달서구청 앞 수거함", lat: 35.8440, lng: 128.5175 },
+      { name: "월성동 수거함", lat: 35.8390, lng: 128.5200 }
+    ];
+
+    locations.forEach(function(loc) {
+      L.marker([loc.lat, loc.lng]).addTo(map)
+        .bindPopup(loc.name);
+    });
   </script>
+
 </body>
 </html>
